# finsight-ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  notes.md  pyproject.toml
.github/workflows/: ci.yml
prompts/: critic_v1.md  synthesize_memo_v1.md  tracer_memo_v1.md
src/finsight/: __init__.py  api.py  cache.py  filings.py  graph.py  llm.py  planner.py  preflight.py  render.py  run.py  service.py  state.py  tracer.py
src/finsight/schemas/: models.py
tests/: test_schemas.py
web/: package-lock.json  package.json
web/src/: App.css  App.jsx  useMemoStream.js
