[project]
name = "finsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Srujan", email = "Srujan.moni07@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "edgartools>=5.36.0",
    "fastapi>=0.138.1",
    "google-genai>=2.8.0",
    "grandalf>=0.8",
    "langchain>=1.3.10",
    "langfuse>=4.9.0",
    "langgraph>=1.2.5",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "slowapi>=0.1.10",
    "sse-starlette>=3.4.5",
    "uvicorn[standard]>=0.49.0",
    "yfinance>=1.4.1",
]


[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
